# ML-1-st-lab

./: .gitignore  Dockerfile  Dockerfile.url  README.md  app.py  docker-compose.yml  docker-compose.yml.url  model.py  optuna_report_link  pyproject.toml  spaceshiptitanic-0.1.0-py3-none-any.whl
notebooks/: catboost_learningv1.ipynb  catboost_model_params_search.ipynb  catboost_model_params_search_v1.ipynb  catboost_training_v1.ipynb  catboost_v1.ipynb  catboost_v2.ipynb
