[tool.poetry]
name = "spaceshiptitanic"
version = "0.1.0"
description = ""
authors = ["Viktor Maslov <maslovvial04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
catboost = "^1.2.2"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
optuna = "^3.5.0"
joblib = "^1.3.2"
wandb = "^0.16.3"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
